--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,50 +1,48 @@
-<header>
-    <div class="header-content">
-        <nav>
-            <ul>
-                <li class="collapse">
-                    <a href="">
-                        <div class="toggle-btn">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <g id="Icon">
-                                <path id="Vector" d="M3 12H21" stroke="#730301" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path id="Vector_2" d="M3 6H21" stroke="#730301" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path id="Vector_3" d="M3 18H21" stroke="#730301" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </g>
-                            </svg>                            
-                        </div>
-                    </a>
-                </li>
-                <li class="logo-container">
-                    <a href="">
-                        <div class="logo">
-                            <img class="logo-img" src="../../../assets/img/logo.png" alt="Logo">
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <div class="notification">
-                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M10.777 2.29408L10.7755 2.30338L10.7738 2.31265L10.7723 2.32058C10.7544 2.41817 10.7074 2.67455 10.5444 2.90865C10.3206 3.23 10.013 3.34444 9.82361 3.39109L9.82361 3.39111L9.8167 3.39276C8.67621 3.66513 7.81357 4.07425 7.14074 4.62475C6.4708 5.17288 5.93895 5.90208 5.5184 6.88971L5.51723 6.89244C5.02202 8.04586 4.82729 9.09811 4.75583 11.6348L4.75574 11.6376C4.63411 15.5663 4.29666 17.5183 3.19387 19.2922L3.19356 19.2927C2.97542 19.6431 2.72119 19.9723 2.40284 20.3213C2.73293 20.3231 3.09091 20.3246 3.47256 20.326C5.55205 20.3333 8.32624 20.335 11.1024 20.3317C13.8785 20.3284 16.655 20.3202 18.739 20.3079C19.1433 20.3055 19.5212 20.303 19.8678 20.3003C19.0558 19.4037 18.4171 18.1778 18.0926 16.9434L18.0925 16.9427C17.7603 15.6755 17.5388 13.4949 17.5388 11.6789C17.5388 9.46275 17.2475 7.94439 16.6493 6.64759L16.6486 6.64608C16.0492 5.34114 15.286 4.54661 14.0709 3.92981C13.7259 3.75629 12.9864 3.49674 12.5103 3.39335C12.4293 3.3774 12.2771 3.34118 12.1161 3.24619C11.9223 3.13183 11.7872 2.97645 11.697 2.8188C11.5738 2.60319 11.5233 2.34638 11.4978 2.21652C11.4963 2.20891 11.4949 2.20173 11.4935 2.19503L11.4935 2.19504L11.492 2.18736C11.4741 2.09353 11.4157 2.00652 11.3253 1.94823C11.2373 1.89154 11.1459 1.87876 11.0702 1.89633C10.9375 1.93476 10.8223 2.02029 10.777 2.29408Z" stroke="#730301" stroke-width="2"/>
-                                <path d="M8.87266 21.8503C8.86837 21.8505 8.86411 21.8506 8.8599 21.8507C8.92564 21.9949 9.01035 22.1496 9.103 22.2864L9.10303 22.2864L9.10641 22.2915C9.46593 22.8364 10.2779 23.3377 11.1065 23.4707L11.1073 23.4708C11.7722 23.5786 12.5424 23.3811 13.1757 22.9826C13.6913 22.6583 14.053 22.2428 14.21 21.8333H11.5514C10.1443 21.8333 9.33475 21.8367 8.87266 21.8503Z" stroke="#730301" stroke-width="2"/>
-                            </svg>                                
-                            <span class="notification-count">9+</span>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <div class="profile">
-                            <img class="profile-img" data-full-text="Fernanda Kipper Brazuka" src="../../../assets/img/profile2.PNG" alt="Profile">
-                            <p class="profile-name" data-full-text="Fernanda Kipper Brazuka">Fernanda Kipper Brazuka</p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
-<main style="height: 3000px; z-index:1!important;width: 100%; background-color: rgba(255, 0, 0, 0.082); margin-top:50px;">
-    <div>This is the body</div>
-</main>
+        <header class="header">
+            <div class="header-content">
+                <nav>
+                    <ul>
+                        <li class="collapse">
+                            <a href="">
+                                <div class="toggle-btn">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g id="Icon">
+                                        <path id="Vector" d="M3 12H21" stroke="#730301" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path id="Vector_2" d="M3 6H21" stroke="#730301" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path id="Vector_3" d="M3 18H21" stroke="#730301" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </g>
+                                    </svg>                            
+                                </div>
+                            </a>
+                        </li>
+                        <li class="logo-container">
+                            <a href="">
+                                <div class="logo">
+                                    <img class="logo-img" src="../../../assets/img/logo.png" alt="Logo">
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="notification">
+                                    <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M10.777 2.29408L10.7755 2.30338L10.7738 2.31265L10.7723 2.32058C10.7544 2.41817 10.7074 2.67455 10.5444 2.90865C10.3206 3.23 10.013 3.34444 9.82361 3.39109L9.82361 3.39111L9.8167 3.39276C8.67621 3.66513 7.81357 4.07425 7.14074 4.62475C6.4708 5.17288 5.93895 5.90208 5.5184 6.88971L5.51723 6.89244C5.02202 8.04586 4.82729 9.09811 4.75583 11.6348L4.75574 11.6376C4.63411 15.5663 4.29666 17.5183 3.19387 19.2922L3.19356 19.2927C2.97542 19.6431 2.72119 19.9723 2.40284 20.3213C2.73293 20.3231 3.09091 20.3246 3.47256 20.326C5.55205 20.3333 8.32624 20.335 11.1024 20.3317C13.8785 20.3284 16.655 20.3202 18.739 20.3079C19.1433 20.3055 19.5212 20.303 19.8678 20.3003C19.0558 19.4037 18.4171 18.1778 18.0926 16.9434L18.0925 16.9427C17.7603 15.6755 17.5388 13.4949 17.5388 11.6789C17.5388 9.46275 17.2475 7.94439 16.6493 6.64759L16.6486 6.64608C16.0492 5.34114 15.286 4.54661 14.0709 3.92981C13.7259 3.75629 12.9864 3.49674 12.5103 3.39335C12.4293 3.3774 12.2771 3.34118 12.1161 3.24619C11.9223 3.13183 11.7872 2.97645 11.697 2.8188C11.5738 2.60319 11.5233 2.34638 11.4978 2.21652C11.4963 2.20891 11.4949 2.20173 11.4935 2.19503L11.4935 2.19504L11.492 2.18736C11.4741 2.09353 11.4157 2.00652 11.3253 1.94823C11.2373 1.89154 11.1459 1.87876 11.0702 1.89633C10.9375 1.93476 10.8223 2.02029 10.777 2.29408Z" stroke="#730301" stroke-width="2"/>
+                                        <path d="M8.87266 21.8503C8.86837 21.8505 8.86411 21.8506 8.8599 21.8507C8.92564 21.9949 9.01035 22.1496 9.103 22.2864L9.10303 22.2864L9.10641 22.2915C9.46593 22.8364 10.2779 23.3377 11.1065 23.4707L11.1073 23.4708C11.7722 23.5786 12.5424 23.3811 13.1757 22.9826C13.6913 22.6583 14.053 22.2428 14.21 21.8333H11.5514C10.1443 21.8333 9.33475 21.8367 8.87266 21.8503Z" stroke="#730301" stroke-width="2"/>
+                                    </svg>                                
+                                    <span class="notification-count">9+</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="profile">
+                                    <img class="profile-img" data-full-text="Fernanda Kipper Brazuka" src="../../../assets/img/profile2.PNG" alt="Profile">
+                                    <p class="profile-name" data-full-text="Fernanda Kipper Brazuka">Fernanda Kipper Brazuka</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>   
+
