--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,21 @@
-<app-header></app-header>
+<div class="container">
+    <app-header></app-header>
+    <main class="content">
+        <div class="banner">
+            <div class="banner-content">
+                <div class="backcover"></div>
+                <div class="image-wrapper">
+                    <img src="./../../../assets/img/main_pic.PNG" alt="cover image">
+                </div>              
+            </div>
+        </div>
+        <div class="info">
+            <div class="titles">
+                <h1>Miss <span>Laurha</span></h1>
+                <p>Home braids in Poznan, with confort and efficiency</p>
+            </div>
+            <a class="book-btn btn" href="/services">Book Now</a>
+        </div>
+    </main>
+    <app-footer></app-footer>
+</div>
