--- a/src/app/components/timeslot/timeslot.component.html
+++ b/src/app/components/timeslot/timeslot.component.html
@@ -5,10 +5,10 @@
         <div *ngFor="let slot of availableSlots" class="slot">
             <!-- <div class="time">{{getDate(slot.start)}}</div> -->
             <div 
-                [attr.data-timeslot]="getDate(slot.start)" 
+                [attr.data-timeslot]="setDateToString(slot.start)+'-'+setDateToString(slot.end)" 
                 (click)="selectTimeSlot($event)" 
                 class="info">
-                {{getDate(slot.start)}} - {{getDate(slot.end)}}
+                {{setDateToString(slot.start)}} - {{setDateToString(slot.end)}}
             </div>
             
         </div>
