--- a/src/app/components/timeslot/timeslot.component.scss
+++ b/src/app/components/timeslot/timeslot.component.scss
@@ -25,6 +25,7 @@
     .slots-wrapper{
         overflow-y: scroll;
         width: 100%;
+        padding-right: 100px;
         display: flex;
         flex-direction: row;
         align-items: center;
