--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -3,8 +3,8 @@
     <main class="content">
         <div class="schedule">
             <h2>Choose Time</h2>
-            <app-calendar/>
-            <app-timeslot/>
+            <app-calendar (dateChange)="onDateChange($event)"/>
+            <app-timeslot [selectedDate]="selectedDate"/>
         </div>
     </main>
     <app-footer></app-footer>
