--- a/src/app/components/timeslot/timeslot.component.html
+++ b/src/app/components/timeslot/timeslot.component.html
@@ -2,17 +2,15 @@
 <div class="timeslot">
     <h5>{{ selectedDate | date: 'EEE, d  MMMM  y' }}</h5>
     <div class="slots-wrapper">
-        <div *ngFor="let slot of availableSlots" class="slot">
-            <!-- <div class="time">{{getDate(slot.start)}}</div> -->
-            <div 
-                [attr.data-timeslot]="setDateToString(slot.start)+'-'+setDateToString(slot.end)" 
-                (click)="selectTimeSlot($event)" 
-                class="info"
-                [class.unvailable]="!slot.bookable"
-                [attr.clickable]="slot.bookable"
-                >
-                {{setDateToString(slot.start)}} - {{setDateToString(slot.end)}}
-            </div>
+        <div *ngFor="let slot of availableSlots" class="slot" 
+            [ngStyle]="{ 'width': calculateSlotWidth(slot) + 'px' }"
+            [attr.data-timeslot]="getTimeSlotToString(slot)"           
+            [class.unvailable]="!slot.bookable"
+            [class.selected]="selectedTimeslot === getTimeSlotToString(slot)"
+        >            
+            <span (click)="selectTimeSlot(getTimeSlotToString(slot))">
+                {{getTimeSlotToString(slot)}}
+            </span>
             
         </div>
         
