--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -21,6 +21,10 @@
       border-bottom: 1px solid #ddd;
       width: 100%;
       
+      span{
+        cursor: pointer
+      }
+
       button {
         background: none;
         border: none;
@@ -62,6 +66,12 @@
           border: 1px solid $light-gray;
           pointer-events: none; 
           cursor: default; 
+        }
+
+        &.empty{
+          pointer-events: none; 
+          cursor: default; 
+          // background-color: #f5f5f5;
         }
   
         &.today {
