--- a/src/app/components/timeslot/timeslot.component.scss
+++ b/src/app/components/timeslot/timeslot.component.scss
@@ -5,11 +5,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: aqua;
     gap: .5px;
-    padding: 5px;
+    padding: 8px 4px;
     // border: 1px solid #ddd;
-    background-color: #ffff;
     box-sizing: border-box;    
     // background-color: green;
     width: 90%;
@@ -34,50 +32,36 @@
         gap: 3px;
 
         .slot{
-            background-color: #fff;
             display: flex;
             justify-content: space-between;
             flex-direction: row;
             gap: 1px;
-            padding: 2px 0 2px 0;
-            font-size: 10px;
-            border-radius: 5px;
+            font-size: 10px;           
             // max-width: 370px;
-            // width: 90%;  
+            border: .5px solid #ddd;
+            
+            border-radius: 5px;
+            padding: 10px 0px;
+            text-align: center;
+            max-width: 2000px;
+            min-width: 80px;
+            
+            &.unvailable{
+                background-color: $light-gray;
+                pointer-events: none; // Prevent clicks
+                cursor: default; // Change cursor to default for unclickable cells
+            }
     
-            div{
-                border: .5px solid #ddd;
-                background-color: #fff;
-                border-radius: 5px;
-                
-                &.time{                  
-                    padding: 10px 0px;
-                    max-width: 10px;
-                    min-width: 10px;
-                    box-sizing: content-box;
-                    border: .5px solid transparent;
-                }
-                
-                &.info{
-                    padding: 10px 0px;
-                    width: 80%;
-                    text-align: center;
-                    max-width: 100px;
-                    min-width: 100px;
-                }
-    
-                &.unvailable{
-                    background-color: $light-gray;
-                    pointer-events: none; // Prevent clicks
-                    cursor: default; // Change cursor to default for unclickable cells
-                }
+            &.selected{
+                background-color: $secondary-color;
+                color: white;
+                font-weight: bold;
+            }
 
-                &.selected{
-                    background-color: $secondary-color;
-                    color: white;
-                    font-weight: bold;
-                }
-    
+            span{                
+                
+                text-align: center;
+                width: 100%;
             }
         }
     }
