--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ $light-gray: #E4E4E4;
 $light-red: #EB5757;
 $background1: #F9F9F9;
 $unvailable-color: #f5f5f5;
+$dark: #27272A;
 
 // Fonts
 $font-family-base: 'Poppins', sans-serif;
@@ -20,9 +21,9 @@ $page-max-width: 768px;
 $page-min-width: 320px;
 
 *, *::before, *::after, html, body {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+box-sizing: border-box;
+margin: 0px;
+padding: 0px;
 }
 
 html{
@@ -45,13 +46,17 @@ body {
     height: 100vh;
     min-width: $page-min-width;
     margin: 0 auto;
-    // background-color: #64d580;
+    background-color: $background1;
 }
 
-header {
+.dark-background {
+    background-color: rgba(0, 0, 0, 0.486);
+}    
+
+header {    
     // height: 15vh;  // Adjust header height as needed
-    width: 100%;
-    background-color: green; // Example
+    background-color: inherit;
+    width: 100%;    
     position: fixed;
     top: 0;
     bottom: 0;
