feat: add events with drag-and-drop functionality or dialog; delete events with dialog

--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -3,14 +3,10 @@
     <main class="content">
       <div class="schedule">
         <h2>Choose Time</h2>
-
-        <app-fcalendar 
-            [schedule]="schedule"
-            (triggleModal)="handleModalOpen()"
-            (dateChange)="onDateChange($event)">
+        
+        <app-fcalendar>
         </app-fcalendar>
 
-  
         <app-timeslot [schedule]="schedule" [selectedDate]="selectedDate"></app-timeslot>
         <button>Continue</button>
   
