--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,3 +97,5 @@ a{
     text-decoration: none;
     color: $gray
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
