--- a/src/app/components/fcalendar/fcalendar.component.scss
+++ b/src/app/components/fcalendar/fcalendar.component.scss
@@ -11,7 +11,7 @@
    }
 
    ::ng-deep .fc {
-    height: 300px;
+    height: 330px;
    }
 
   // Style for FullCalendar buttons
@@ -21,7 +21,7 @@
     outline: none;
     box-shadow: none;
     display: inline-block;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold;
     line-height: 1.5;
     padding: 0;  // Added padding for better button size
@@ -35,25 +35,22 @@
   // Primary button styling (used for active buttons)
   ::ng-deep .fc .fc-button-primary {
     background-color: transparent;     // Assuming $primary-color is defined in your styles.scss
-    border: none;
-    outline: none;
-    box-shadow: none;
-    color: black;
+    border: 1px solid $light-gray;
+    padding: 2px 4px;
+    color: $gray;
 
     &:hover {
-      background-color:transparent; // Hover effect to darken button
-      color: $primary-color;
+      // background-color:transparent; // Hover effect to darken button
+      color: $secondary-color;
       font-weight: bold;
-      border: none;
-      outline: none;
-      box-shadow: none;
+      border-color: #bbb;
     }
    
   }
 
   ::ng-deep .fc .fc-button-primary:not(:disabled).fc-button-active, .fc .fc-button-primary:not(:disabled):active {
     background-color: transparent;
-    border-color: transparent;
+    border-color: #bbb;
     color: $secondary-color;
     outline: none;
     box-shadow: none;
@@ -116,9 +113,52 @@
 }
 
 ::ng-deep .fc .fc-day-today {
-  background-color:  rgba(213, 136, 100, 0.123)
+  background-color:  rgba(213, 136, 100, 0.123);
 }
 
+::ng-deep .fc-event-title{
+  flex-direction: column;
+  word-wrap: break-word;
+  word-break: break-all; /* Forces text to break wherever necessary */
+}
 
+::ng-deep .event-tray {
+  padding: 10px;
+  background-color: #f4f4f4;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  .external-event {
+    padding: 8px;
+    background-color: #3788d8;
+    color: white;
+    margin-bottom: 5px;
+    cursor: pointer;
+  }
+}
+
+::ng-deep #draggable-el{
+  margin: 3px;
+}
+
+::ng-deep .tray-el{
+  
+  font-size: 11px;
+  padding: 4px;
+  width: 15%;
+  margin: 4px;
+  border: 1px solid $secondary-color;
+  border-radius: 10px;
+  text-align: center;
+}
+&:hover {
+}
  
 }
+
+::ng-deep .no-select {
+  user-select: none; /* Standard syntax */
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+}
+
