--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,24 @@
 @import '../../../styles.scss';
 
+.example-container {
+    width: 500px;
+    height: 300px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+
+    .example-sidenav {
+        padding: 20px;
+    }
+    .example-sidenav-content {
+      display: flex;
+      height: 100%;
+      align-items: center;
+      justify-content: center;
+
+    }
+}
+  
+  
+
 .container{
     // background-color: aquamarine;
     
