--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,47 +1,71 @@
 @import '../../../styles.scss';
 
-.footer{
-    // border: 1px solid red;
-    width: 100vw;
-    min-width: $page-min-width;
-    max-width: $page-max-width;
+
+:host {  
+    height: 10%;
+    min-height: 50px;
+    max-height: 100px;
+    width: 100%;
+
+ }
+
+
+.footer{ 
+    height: 100%; 
+    width: 100%;  
+    box-sizing: border-box;
+    padding: 10px;
     background-color: $primary-color;
-    height: 100%;
-    max-height: 80px;
-    min-height: 80px;
-    margin-bottom: 0px;
     background-image: url(../../../assets/img/Miss_Laura_Empty_background.png);
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;    
     color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    flex-grow: 20;
-
-    .rights{
-        p{
-            font-family: Poppins;
-            font-size: .5rem;
-            color: whitesmoke;
-        }
-    }
-
-    .contacts{
+    flex: 1;
+    overflow: hidden;
+    
+    .content{
         display: flex;
+        width: 100%;
+        height: 100%;
+        align-items: center;
         flex-direction: row;
         justify-content: space-between;
-        align-items: center;
-        gap: 25px;
-        div{
-            svg{
-                width: 20px;
+
+        .rights{
+            width: 50%;
+            height: 50%;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            padding-bottom: 2rem;
+            box-sizing: border-box;
+            p{
+                font-family: Poppins;
+                font-size: .6rem;
+                color: whitesmoke;
+                margin: 0;
+            }
+        }
+    
+        .contacts{
+            // height: 100%;
+            width: 30%;
+            max-height: 50px;
+            // background-color: green;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1rem;
+            div{
+                svg{
+                    width: 1rem;
+                }
             }
         }
     }
+
 
     
 }
