--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,70 +2,63 @@
 
 // VARIABLES
 
-$header-height-mobile: 60px; 
-$header-height-tablet: 60px; 
-$header-height-desktop: 65px; 
-$nav-item-height: 15px;
-$side-space: 0.5rem;
+
 
 // MOBILE-FIRST BASE STYLES (applies to small screens)
 
-  header {  
-    border-bottom: .5px solid $primary-color;
-    // position: fixed;
-    // top: 0;
-    // left: 0;
-    // z-index: 1000; 
-    
+ :host {  
+    height: 7%;
+    min-height: 50px;
+    max-height: 100px;
+    width: 100%;
+ }
+
+  .header{
+    border-bottom: .1px solid $secondary-color;   
+    // background-color: green;
     display: flex;
+    height: 100%;
     align-items: center;
     justify-content: center;
-    
     transform: translateY(0);
     transition: transform .3s ease;
     
-    width: 100vw;
-    min-width: $page-min-width;
-    max-width: $page-max-width;
-    margin: 0 auto;
-  
-    height: 100;
-    min-height: $header-height-mobile;
-    max-height: $header-height-mobile;
-  
     .header-content {
       width: 100%;
       margin: 0 $side-space;
-      height: $header-height-mobile;
+      height: 100%;
       display: flex;
       justify-content: center;
-      align-items: center;
-  
-      nav {
-        width: 100%;
-        z-index: 1000;
-  
+      align-items: center; 
+      z-index: 1000;
+        
         ul {
           display: flex;
           align-items: center;
           justify-content: space-between;
           padding: 0;
           margin: 0;
-          gap: 15px;
+          gap: 1px;
           position: relative;
-  
+          height: 100%;
+          width: 100%;
+          
           li {
-  
-             &.logo-container{
-                  flex: 1;
-             }
+            height: 100%;
+            width: 13%;
+            // background-color: purple;
+            
+           
+            &.logo-container{
+              flex: 1;
+            }
   
             a {
               div {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: $header-height-mobile;
+                height: 100%;
   
                 p {
                   font-size: x-small;
@@ -74,6 +67,8 @@ $side-space: 0.5rem;
   
                 svg {
                   max-width: 22px;
+                  min-width: 22px;
+                  min-height: 22px;
                   max-height: 22px;
                 }
   
@@ -91,13 +86,42 @@ $side-space: 0.5rem;
                     height: auto;
                   }
                 }
+                
+                &.notification {
+                  position: relative;
+                  display: flex;
+                  width: 50%;
   
+                    .notification-count {
+                      position: absolute;
+                      top: 12px;
+                      left: 10px;
+                      color: white;
+                      border-radius: 22px;
+                      padding: 0px 4px;
+                      font-size: 10px;
+                      font-family: "Roboto","Arial",sans-serif;
+                      text-align: center;
+                      font-weight: 400;
+                      display: inline-block;
+                      width: 100%;
+                      max-width: 18px;
+                      min-width: 8px;
+                      height: 16px;
+                      line-height: 16px;
+                      
+                    }
+                  
+                }
                 &.profile {
+                  width: 50%;
+                  height: 100%;
                   display: flex;
                   gap: 2px;
-  
+                  
                   img {
-                    border-radius: 50%;
+                    border-radius: 50px;
+                    height: 60px;
                     object-fit: cover;
                   }
   
@@ -110,40 +134,23 @@ $side-space: 0.5rem;
                     cursor: pointer;
                   }
                 }
-  
-                &.notification {
-                  position: relative;
+                &.button-toggle{
+                  width: 50%;
+                  height: 100%;
                   display: flex;
-  
-                    .notification-count {
-                      position: absolute;
-                      top: 12px;
-                      left: 12px;
-                      background-color: #c00;
-                      color: white;
-                      border-radius: 22px;
-                      padding: 0px 4px;
-                      font-size: 10px;
-                      font-family: "Roboto","Arial",sans-serif;
-                      text-align: center;
-                      font-weight: 400;
-                      display: inline-block;
-                      min-width: 8px;
-                      height: 16px;
-                      max-width: 18px;
-                      line-height: 16px;
-  
-                      
-                    }
-                  
+                  justify-self: center;
+                  // background-color: red;
+                  align-items: center;
+                  justify-content: center;
                 }
+                
               }
             }
           }
           
         }
-      }
     }
+    
   }
   
   
