--- a/src/styles copy.scss
+++ b/src/styles copy.scss
@@ -36,55 +36,57 @@ $side-space: 0.1rem;
 // }
 
 
-html{
-    overflow: hidden;
-}
-*,html, body{
+*, html, body{
     margin: 0;
     padding: 0;
-    height: 100dvh;
-    width: 100dvw;    
-    box-sizing: border-box;
+    // height: 100vh;
+    // width: 100vw;
+    // // overflow: hidden;
+    // box-sizing: border-box;
+    // font-family: $font-family-base;
 }
 
-.container{
-    // background-color: red;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-}
-// .header, .footer{
+// .container{
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     flex: 1;
+//     flex-direction: column;
+//     background-color: $background1;     
+//     overflow-y: auto;       
+// }
+
+// .header {       
+//     // background-color: rgba(255, 255, 255, 0.808);
+//     // background-color: green;
+//     height: 60px;    
 //     min-height: 50px;
 //     max-height: 100px;
-//     /* border: 1px solid black; */
+//     min-width: 320px;
+//     position: sticky;
+    
 // }
-// header{
-//     // background-color: green;
-// }
+
 // main{
-//     background-color: yellow;
-//     // max-height: 86%;
+//     background-color: red;
+//     max-height: 86%;
 //     flex: 1;
-//     /* max-height: 86dvh; */
-// }
-// .footer{
-//     background-color:purple;
-//     color: white;
 // }
 
-ul{
-    list-style-type: none;
-}
-a{
-    text-decoration: none;
-    color: $gray
-}
+// footer {
+//     background-color: green;
+//     height: 7%;    
+//     min-height: 60px;
+//     max-height: 110px;
+//     background-color: yellow;
+// }
 
-/* For screens with width between 1366px and 1920px (commonly 14-inch laptops) */
-@media (min-width: 1366px) and (max-width: 1920px) {
-    main {
-        background-color: blue; /* Example style */
-    }
-}
+// ul{
+//     list-style-type: none;
+// }
+// a{
+//     text-decoration: none;
+//     color: $gray
+// }
+
 
