feat: fix layout height issues

--- a/src/app/components/fcalendar/fcalendar.component.html
+++ b/src/app/components/fcalendar/fcalendar.component.html
@@ -1,7 +1,7 @@
 
-<div>
-  <div>
-    <div>
+<div class="calendar-container">
+  <div class="content">
+    <div class="calendar-object">
       <full-calendar [options]="calendarOptions">
         <app-menu-option-dialog>          
           <button mat-menu-item>Daily</button>
