--- a/src/app/components/default-layout/default-layout.component.scss
+++ b/src/app/components/default-layout/default-layout.component.scss
@@ -2,40 +2,49 @@
 
 :host{
     flex: 1;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .container{
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    overflow: hidden;
+    overflow: auto;
     
+    main{
+        flex: 1;
+        height: 100%;
+        width: 100%;
+        background-color: red;
+        display: flex;
+
+        .main-content {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            margin-top: 0px;
+            box-sizing: content-box;
+            // min-height: 275px;
+        
+        
+                .sidenav {
+                    width: 13%;
+                    height: 100%;
+                    margin-left: 0;
+                }        
+                
+                .sidenav-content{
+                    display: flex;
+                    flex-direction: column; 
+                    height: 100%;
+                    width: 100%;
+                    align-items: center;
+                
+                }
+            }
+    }
 }
 
 
-.main-content {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    margin-top: 0px;
-    box-sizing: content-box;
-    // min-height: 275px;
 
-
-        .sidenav {
-            width: 10%;
-            height: 100%;
-            margin-left: 0;
-        }        
-        
-        .sidenav-content{
-            display: flex;
-            flex-direction: column; 
-            height: 100%;
-            width: 100%;
-            align-items: center;
-        
-        }
-    }
