--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,15 +2,13 @@
     <nav class="header-content">
         <ul>
             <li>
-                <a href="#">
-                    <div class="button-toggle" (click)="handleToggleMenu()">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3 12H21" stroke="#730301" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M3 6H21" stroke="#730301" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M3 18H21" stroke="#730301" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>                            
-                    </div>
-                </a>
+                <button class="button-toggle" (click)="handleToggleMenu()">
+                  <div class="humburguer">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                  </div>
+                </button>
             </li>                       
             <li class="logo-container">
                 <a href="">
