--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -46,9 +46,31 @@
           li {
             height: 100%;
             width: 13%;
+            margin-left: 5px;
             // background-color: purple;
             
-           
+            button{
+              width: 25px;
+              height: 25px;
+              margin: .8rem .4rem;
+              // border: none;
+              // padding: 30px;
+
+              .humburguer{
+                width: 100%;
+                height: 80%;
+                display: flex;
+                flex-direction: column;
+                gap: 1px;
+                justify-content: space-between;
+                .bar{
+                  width: 100%;
+                  height: 4px;
+                  background-color: $primary-color;
+                }
+              }
+          // 
+            }
             &.logo-container{
               flex: 1;
             }
@@ -139,7 +161,7 @@
                   height: 100%;
                   display: flex;
                   justify-self: center;
-                  // background-color: red;
+                  background-color: red;
                   align-items: center;
                   justify-content: center;
                 }
