--- a/src/app/pages/schedule/schedule.component.scss
+++ b/src/app/pages/schedule/schedule.component.scss
@@ -1,25 +1,34 @@
 @import '../../../styles.scss';
 
-main{
-    
-    .schedule{
+:host{
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.schedule{
+    width: 100%;
+    height: 100%;
+    .content{
         width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
+        overflow: auto;
         // justify-content: space-between;
         // align-items: center;
-        // background-color: aqua;
         
         gap:  20px;
-        height: 100%;
         padding-top: 20px;
-        h2{
+        h3{
             color: $primary-color;
             text-align: center;
-            font-size: $title-size;
+            font-size: .8rem;
+            height: 4px;
+    
         }
         
-        button{
+        .continue{
             width: 40%;
             align-self: center;
             padding: 8px 0;
@@ -29,8 +38,7 @@ main{
             font-weight: bold;
             margin-top: 5%;
         }
-        
-        
-    }
-
+    }    
+    
 }
+
