--- a/src/app/pages/services/services.component.scss
+++ b/src/app/pages/services/services.component.scss
@@ -1,48 +1,75 @@
 @import '../../../styles.scss';
-main{
-    padding-top: 30px;
-    // background-color: aqua;
+
+:host{
+    width: 100%;
+    height: 100%;
+    background-color: green;
+    overflow: auto;
+}
+
+h2{
+    color: $primary-color;
+    text-align: center;
+    font-size: $title-size;
+}
+
+.menu{
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-
-    h2{
-        color: $primary-color;
-        text-align: center;
-        font-size: $title-size;
-    }
-
-    .menu{
-        flex-grow: 1;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    
+    .content{
+        // flex-grow: 1;
+        // margin-top: -90px;
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
-        width: 140px;
+        width: 50%;
+        height: 80%;
         gap: 10px;
         padding: 10px;
-        // border: 1px solid red;
+        // background-color: antiquewhite;
+        box-sizing: border-box;
 
-        div{
-            display: flex;
+        a{
             width: 100%;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 5px solid $secondary-color;
-            gap: 5px;
-            svg{
-                width: 90px;
-            }
-            p{
-                text-align: center;
+            height: 80%;
+            
+            border-bottom: 2px solid $secondary-color;
+            
+
+            div{ 
                 padding: 10px;
-                font-size: .8rem;
-                font-family: 'Poppins', sans-serif;
-                font-weight: 800;
-                color: gray
+                overflow: hidden;       
+                display: flex;
+                width: 100%;
+                height: 100%;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                gap: 5px;
+                svg{
+                    width: 60px;
+                    height: 60px;
+                }
+                p{
+                    text-align: center;
+                    height: 5px;
+                    padding: 10px;
+                    font-size: .8rem;
+                    font-family: 'Poppins', sans-serif;
+                    font-weight: 800;
+                    color: gray
+                }
             }
+
         }
+        
+        
     }
 }
